Añadí Grids al body

--- a/pages/my-dnd-beyond.html
+++ b/pages/my-dnd-beyond.html
@@ -33,6 +33,7 @@
     </header>
 
     <main class="background-img">
+        <div class="grid-cards">
         <div class="cards">
         <div class="card-five">
             <div class="card-title">
@@ -64,6 +65,7 @@
                         <p>Browse Presets</p>
                     </div>
                 </div>
+        </div>
         </div>
     </main>
     <footer class="footer">
