--- a/pages/news.html
+++ b/pages/news.html
@@ -31,8 +31,8 @@
             </ul>
         </nav>
     </header>
-
     <main class="background-img">
+        <div class="article-grid">
         <article>
             <h2>Dragons of Stormwreck Isle is the new Starter Set</h2>
             <div>
@@ -83,6 +83,7 @@
         <section class="video">
             <video src="../assets/video/Dungeons & Dragons_ Honor Among Thieves _ Official Trailer (2023 Movie).mp4" controls ></video>
         </section>
+        </div>
         </div>
     </main>
 
