--- a/pages/the-basics.html
+++ b/pages/the-basics.html
@@ -33,6 +33,7 @@
         </div>
     </header>
     <main class="background-img">
+        <div class="cards-grid">
         <section class="cards">
         <div class="card-one">
                 <div class="card-header">
@@ -80,6 +81,7 @@
         </ul>
 </div>
 </section>
+    </div>
     </main>
     
     <footer class="footer">
