--- a/pages/my-dnd-beyond.html
+++ b/pages/my-dnd-beyond.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D&D Beyond</title>
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -14,12 +15,13 @@
             <a href="../home.html"><img src="../assets/logos/logo.png.png" alt=""></a>
         </div>
         <div class="search">
-            <form>
-                <input type="text" placeholder="Search..." name="search">
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
         </div>
         <div class="log-in">
-            <button>log-in</button>   
+            <button type="button" class="btn btn-outline-danger">Log in</button> 
         </div>   
         <nav>
             <ul class="nav-bar">
@@ -77,5 +79,6 @@
                 <a href="https://www.twitch.tv/dndbeyond" target="_blank"><img src="../assets/vector-icons/twitch-svgrepo-com.svg"></a>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
