--- a/pages/resources.html
+++ b/pages/resources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Beyond</title>
+    <title>D&D Beyond | Resources</title>
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../home.html"><img src="../assets/logos/logo.png.png" alt=""></a>        
+            <a href="../index.html"><img src="../assets/logos/logo.png.png" alt=""></a>        
         </div>
         <div class="search">
             <form class="d-flex" role="search">
@@ -37,27 +37,27 @@
     <main class="background-img">
         <section class="squares">
         <div class="square-one">
-            <h1 class="square-text">Guides & Manuals</h1>
+            <p class="square-text">Guides & Manuals</p>
         </div>
 
         <div class="square-two">
-            <h1 class="square-text">Sourcebooks & Lore</h1>
+            <p class="square-text">Sourcebooks & Lore</p>
         </div>
 
         <div class="square-three">
-            <h1 class="square-text">Adventures for 5e</h1>
+            <p class="square-text">Adventures for 5e</p>
         </div>
 
         <div class="square-four">
-            <h1 class="square-text">Older modules</h1>
+            <p class="square-text">Older modules</p>
         </div>
 
         <div class="square-five">
-            <h1 class="square-text">Help & Tips</h1>
+            <p class="square-text">Help & Tips</p>
         </div>
 
         <div class="square-six">
-            <h1 class="square-text">Helpful Websites</h1>
+            <p class="square-text">Helpful Websites</p>
         </div>
         </section>
     </main>
