Added SEO, SASS, resized and compressed images.

--- a/pages/news.html
+++ b/pages/news.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="News relevant to the Dungeons and Dragons game, movies, books">
+    <meta name="keywords" content="news, movie, upcoming, new releases, article, D&D, up next, coming soon">
     <title>D&D Beyond | News</title>
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png" type="image/x-icon"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
