--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site that teaches the basics for playing Dungeons and Dragons. Provides info and a platform to keep your game organised. Companion site.">
+    <meta name="keywords" content="dungeons and dragons, D&D, TTRPG, tabletop game">
     <title>D&D Beyond | Home</title> 
     <link rel="shortcut icon" href="./assets/img/favicon-32x32.png" type="image/x-icon"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
