--- a/pages/the-basics.html
+++ b/pages/the-basics.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="../assets/logos/logo.png.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/logos/logo.png.png" alt="header logo"></a>
         </div>
         <div class="search">
             <form class="d-flex" role="search">
@@ -89,11 +89,11 @@
     
     <footer class="footer">
         <section class="social-media">
-                <a href="https://www.facebook.com/dndbeyond/" target="_blank"><img src="../assets/vector-icons/facebook-svgrepo-com.svg" alt=""></a>
-                <a href="https://www.instagram.com/dndbeyond/?hl=en" target="_blank"><img src="../assets/vector-icons/instagram-svgrepo-com.svg"></a>
-                <a href="https://www.youtube.com/c/dndbeyond" target="_blank"><img src="../assets/vector-icons/youtube-svgrepo-com.svg"></a>
-                <a href="https://twitter.com/DnDBeyond?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../assets/vector-icons/twitter-svgrepo-com.svg"></a>
-                <a href="https://www.twitch.tv/dndbeyond" target="_blank"><img src="../assets/vector-icons/twitch-svgrepo-com.svg"></a>
+                <a href="https://www.facebook.com/dndbeyond/" target="_blank"><img src="../assets/vector-icons/facebook-svgrepo-com.svg" alt="facebook icon"></a>
+                <a href="https://www.instagram.com/dndbeyond/?hl=en" target="_blank"><img src="../assets/vector-icons/instagram-svgrepo-com.svg" alt="instagram icon"></a>
+                <a href="https://www.youtube.com/c/dndbeyond" target="_blank"><img src="../assets/vector-icons/youtube-svgrepo-com.svg" alt="youtube icon"></a>
+                <a href="https://twitter.com/DnDBeyond?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="../assets/vector-icons/twitter-svgrepo-com.svg" alt="twitter icon"></a>
+                <a href="https://www.twitch.tv/dndbeyond" target="_blank"><img src="../assets/vector-icons/twitch-svgrepo-com.svg" alt="twitch icon"></a>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
