Corrected the basics.html ul issue

--- a/pages/the-basics.html
+++ b/pages/the-basics.html
@@ -41,52 +41,40 @@
         <div class="card-one">
                 <div class="card-header">
                     <ul>For 5e players
-                </div>
-                <div class="card-text">
-                    <li>Basic rules</li>
+                    <li class="card-text">Basic rules</li>
                     <li>Character building</li>
                     <li>Dice</li>
                     <li>Races & Classes</li>
-                </div>
                     </ul>
-        </div>
+                </div>
         <div class="card-two">
             <div class="card-header">
                 <ul>For 5e DMs
-            </div>
-            <div class="card-text">
-                <li>Basic rules for DMs</li>
+                <li class="card-text">Basic rules for DMs</li>
                 <li>Adventure guides</li>
                 <li>Maps & Locations</li>
                 <li>Monster Manuals</li>
-            </div>
                 </ul>
-    </div>
+            </div>
     <div class="card-three">
         <div class="card-header">
             <ul>Older editions
-        </div>
-        <div class="card-text">
-            <li>Advanced D&D</li>
+            <li class="card-text">Advanced D&D</li>
             <li>Dungeons & Dragons 3e (1980s)</li>
             <li>One D&D (Beta)</li>
-        </div>
             </ul>
-</div>
-<div class="card-four">
+        </div>
+    </div>
+    <div class="card-four">
     <div class="card-header">
         <ul>For younger players
-    </div>
-    <div class="card-text">
-        <li>For pre-school kids</li>
+        <li class="card-text">For pre-school kids</li>
         <li>Resources for teachers</li>
-    </div>
         </ul>
-</div>
+    </div>
 </section>
     </div>
     </main>
-    
     <footer class="footer">
         <section class="social-media">
                 <a href="https://www.facebook.com/dndbeyond/" target="_blank"><img src="../assets/vector-icons/facebook-svgrepo-com.svg" alt="facebook icon"></a>
