--- a/index.html
+++ b/index.html
@@ -16,25 +16,41 @@
         <div class="logo">
             <a href="#"><img src="./assets/logos/logo.png.png" alt="header logo"></a>
         </div>
-        <div class="search">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-danger" type="submit">Search</button>
-            </form>
-        </div>
-        <div class="log-in">
-            <button type="button" class="btn btn-outline-danger">Log in</button> 
-        </div>     
-            <nav>
-            <ul class="nav-bar">
-                <li><a href="">Home</a></li>
-                <li><a href="./pages/the-basics.html">The Basics</a></li>
-                <li><a href="./pages/my-dnd-beyond.html">My D&D Beyond</a></li>
-                <li><a href="./pages/resources.html">Resources</a></li>
-                <li><a href="./pages/news.html">News</a></li>
-            </ul>
-        </nav>
-        </div>
+            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="search">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-danger" type="submit">Search</button>
+                    </form>
+                </div>
+                
+                <div class="collapse navbar-collapse" id="opciones">   
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/the-basics.html">The basics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/my-dnd-beyond.html">My D&D Beyond</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/resources.html">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/news.html">News</a>
+                    </li>            
+                </ul>
+                </div>
+                <div>
+                <button type="button" class="btn btn-danger">Log in</button>
+                </div>
+            </nav>
     </header>
     <main class="background-img">
         <div>
