--- a/pages/resources.html
+++ b/pages/resources.html
@@ -14,26 +14,43 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="../assets/logos/logo.png.png" alt=""></a>        
+            <a href="#"><img src="../assets/logos/logo.png.png" alt="header logo"></a>
         </div>
-        <div class="search">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-danger" type="submit">Search</button>
-            </form>
-        </div>
-        <div class="log-in">
-            <button type="button" class="btn btn-outline-danger">Log in</button> 
-        </div>   
-        <nav>
-            <ul class="nav-bar">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./the-basics.html">The Basics</a></li>
-                <li><a href="./my-dnd-beyond.html">My D&D Beyond</a></li>
-                <li><a href="">Resources</a></li>
-                <li><a href="./news.html">News</a></li>
-            </ul>
-        </nav>
+            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="search">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-danger" type="submit">Search</button>
+                    </form>
+                </div>
+                
+                <div class="collapse navbar-collapse" id="opciones">   
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">The basics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/my-dnd-beyond.html">My D&D Beyond</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/resources.html">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/news.html">News</a>
+                    </li>            
+                </ul>
+                </div>
+                <div>
+                <button type="button" class="btn btn-danger">Log in</button>
+                </div>
+            </nav>
     </header>
 
     <main class="background-img">
