--- a/pages/the-basics.html
+++ b/pages/the-basics.html
@@ -14,65 +14,76 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="../assets/logos/logo.png.png" alt="header logo"></a>
+            <a href="#"><img src="../assets/logos/logo.png.png" alt="header logo"></a>
         </div>
-        <div class="search">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-danger" type="submit">Search</button>
-            </form>
-        </div>
-        <div class="log-in">
-            <button type="button" class="btn btn-outline-danger">Log in</button> 
-        </div> 
-        <nav>
-            <ul class="nav-bar">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="">The Basics</a></li>
-                <li><a href="./my-dnd-beyond.html">My D&D Beyond</a></li>
-                <li><a href="./resources.html">Resources</a></li>
-                <li><a href="./news.html">News</a></li>
-            </ul>
-        </nav>
+            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="search">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-danger" type="submit">Search</button>
+                    </form>
+                </div>
+                
+                <div class="collapse navbar-collapse" id="opciones">   
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">The basics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/my-dnd-beyond.html">My D&D Beyond</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/resources.html">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/news.html">News</a>
+                    </li>            
+                </ul>
+                </div>
+                <div>
+                <button type="button" class="btn btn-danger">Log in</button>
+                </div>
+            </nav>
     </header>
     <main class="background-img">
-        <div class="cards-grid">
-        <section class="cards">
-        <div class="card-one">
-                <div class="card-header">
-                    <ul>For 5e players
+        <div class="container">
+            <div class="div1"> 
+                <ul class="card-header">For 5e players
                     <li class="card-text">Basic rules</li>
                     <li>Character building</li>
                     <li>Dice</li>
                     <li>Races & Classes</li>
-                    </ul>
-                </div>
-        <div class="card-two">
-            <div class="card-header">
-                <ul>For 5e DMs
+                </ul>
+            </div>
+            <div class="div2">
+                <ul class="card-header">For 5e DMs
                 <li class="card-text">Basic rules for DMs</li>
                 <li>Adventure guides</li>
                 <li>Maps & Locations</li>
                 <li>Monster Manuals</li>
+                </ul> 
+            </div>
+            <div class="div3"> 
+                <ul class="card-header">Older editions
+                <li class="card-text">Advanced D&D</li>
+                <li>Dungeons & Dragons 3e (1980s)</li>
+                <li>One D&D (Beta)</li>
                 </ul>
             </div>
-    <div class="card-three">
-        <div class="card-header">
-            <ul>Older editions
-            <li class="card-text">Advanced D&D</li>
-            <li>Dungeons & Dragons 3e (1980s)</li>
-            <li>One D&D (Beta)</li>
-            </ul>
-        </div>
+            <div class="div4">
+                <ul class="card-header">For younger players
+                <li class="card-text">For pre-school kids</li>
+                <li>Resources for teachers</li>
+                </ul> 
+            </div>
     </div>
-    <div class="card-four">
-    <div class="card-header">
-        <ul>For younger players
-        <li class="card-text">For pre-school kids</li>
-        <li>Resources for teachers</li>
-        </ul>
-    </div>
-</section>
     </div>
     </main>
     <footer class="footer">
