Tried to make it responsive for mobile

--- a/pages/news.html
+++ b/pages/news.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">The basics</a>
+                        <a class="nav-link" href="./the-basics.html">The basics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/my-dnd-beyond.html">My D&D Beyond</a>
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="../pages/resources.html">Resources</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/news.html">News</a>
+                        <a class="nav-link" href="">News</a>
                     </li>            
                 </ul>
                 </div>
@@ -57,51 +57,34 @@
         <article>
             <h2>Dragons of Stormwreck Isle is the new Starter Set</h2>
             <div>
-                <img src="../assets/img/DD-key-art-Essentials-Kit.jpg" alt="" class="image imageone">
-                <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci cupiditate velit eius aliquid fugiat dolorem ratione, magnam corporis alias ea quas, odit amet nam mollitia, sunt vitae rerum ducimus!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deserunt fugiat temporibus rem placeat tenetur saepe debitis, nam porro magni vitae optio repellat! Eveniet magni esse consequatur repudiandae incidunt quisquam.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. At architecto hic accusantium unde nesciunt assumenda optio numquam officia, labore tempore sit, nam ad, quam ut molestiae ducimus dolorem alias sequi.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam cumque non incidunt aliquid a, unde et officiis molestias itaque? Recusandae dolorum blanditiis ipsum nulla iure nobis deleniti optio fuga voluptatibus?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus in numquam omnis voluptate quidem excepturi eveniet rem dolores illum possimus error, nam sed obcaecati quos voluptas voluptatibus at, exercitationem animi.
-                </p>
+                <img src="../assets/img/DD-key-art-Essentials-Kit.jpg" alt="" class="imageone">
+                <p class="article-text">The Dungeons & Dragons Starter Set: Dragons of Stormwreck Isle is your gateway to action-packed adventures in the cooperative storytelling game Dungeons & Dragons, where heroes battle monsters, find treasure, and undertake epic quests. This box contains the essential rules of the game plus everything you need to play heroic characters caught up in an ancient war among dragons as they explore the secrets of Stormwreck Isle.</p>
             </div>
         </article>
         <article>
-            <h2>Article title</h2>
-            <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus optio rem quibusdam eius tempore veritatis unde aspernatur dignissimos impedit nisi voluptates asperiores veniam placeat laudantium, quis enim accusantium molestiae mollitia.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam explicabo laborum blanditiis quasi harum modi saepe beatae odit corporis, esse ex quo consequuntur aspernatur ipsum hic itaque earum. Rem, dicta.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nulla assumenda in tenetur cupiditate, voluptas, voluptates cumque veniam aspernatur aut eius nesciunt neque nisi, quas minus quod ducimus laboriosam animi.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nam quae molestias veritatis excepturi deleniti quod repellat sint, totam hic nisi corrupti blanditiis cupiditate porro sequi in, facilis eligendi voluptatem?
-            </p>
+            <h2>Dungeons & Dragons: Honor Among Thieves</h2>
+            <p class="article-text">A charming thief and a band of unlikely adventurers undertake an epic heist to retrieve a lost relic, but things go dangerously awry when they run afoul of the wrong people. Dungeons & Dragons: Honor Among Thieves brings the rich world and playful spirit of the legendary roleplaying game to the big screen in a hilarious and action-packed adventure.</p>
             <button>Read more</button>
         </article>
         <article>
-            <h2>Article title</h2>
+            <h2>Virtual Play Weekends</h2>
             <div>
-                <img src="../assets/img/the-abcs-and-123s-of-dd.webp" alt="" class="image imagetwo">
-                <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ex tenetur illum error et quis magni vel doloribus ipsum ullam neque quasi dolore assumenda, labore praesentium veniam quod maxime minima!
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore similique, perspiciatis id distinctio vitae reiciendis optio adipisci. Officiis assumenda, praesentium quos eveniet laborum amet iure, tempora ipsam pariatur fugit dicta!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem nobis aperiam, amet consequuntur repellendus earum magnam, ratione deleniti dolor distinctio ipsam! Corrupti dicta accusantium illum voluptatibus, veniam laboriosam sunt earum.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor delectus soluta quos quis eligendi libero ipsam nulla facere omnis mollitia asperiores earum aspernatur laboriosam temporibus nobis, commodi tempore est corrupti.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, fuga saepe maxime suscipit vel veritatis nobis quas ullam recusandae dicta animi accusantium sequi sit amet eligendi, iusto, illo doloremque cum!
-                </p>
+                <img src="../assets/img/the-abcs-and-123s-of-dd.webp" alt="" class="imagetwo">
+                <p class="article-text">A monthly program that serves as a "mini-convention" for D&D tabletop play. Connect with your friends around the world and play D&D with some of the best Dungeon Masters anywhere. </p>
                 <button>Read more</button>
             </div>
         </article>
         <article>
-            <h2>Article title</h2>
+            <h2>Diversity and Dungeons & Dragons</h2>
             <div>
-                <p class="article-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed consequuntur soluta perferendis maxime eius non quo, neque sit ullam animi, quasi accusamus ut cumque, quae numquam culpa tenetur odit eligendi!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum obcaecati minima accusamus, nulla tenetur nihil quasi, expedita, aliquam nam nesciunt debitis ea earum numquam doloremque vero autem laudantium. Labore, accusantium?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis repellendus soluta vitae blanditiis, rem ea aperiam expedita odio repudiandae unde harum cum velit sint earum ut maiores sequi dolore sapiente.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum deserunt facilis, sunt libero incidunt cupiditate? Culpa amet fuga nobis illo at perferendis nulla reiciendis! Facere nesciunt mollitia deserunt dolores.
-                </p>
+                <p class="article-text"> Dungeons & Dragons teaches that diversity is strength, for only a diverse group of adventurers can overcome the many challenges a D&D story presents. In that spirit, making D&D as welcoming and inclusive as possible has moved to the forefront of our priorities over the last six years.</p>
+                <p class="article-text">We'd like to share with you what we've been doing, and what we plan to do in the future to address legacy D&D content that does not reflect who we are today. We recognize that doing this isn't about getting to a place where we can rest on our laurels but continuing to head in the right direction. We feel that being transparent about it is the best way to let our community help us to continue to calibrate our efforts.</p>
                 <button>Read more</button>
             </div>
         </article>
         <div>
             <p class="p-title">New trailer for upcoming movie</p>
-        <section class="video">
+        <section class="news-video">
             <video src="../assets/video/Dungeons & Dragons_ Honor Among Thieves _ Official Trailer (2023 Movie).mp4" controls ></video>
         </section>
         </div>
