--- a/pages/my-dnd-beyond.html
+++ b/pages/my-dnd-beyond.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">The basics</a>
+                        <a class="nav-link" href="./the-basics.html">The basics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/my-dnd-beyond.html">My D&D Beyond</a>
+                        <a class="nav-link" href="">My D&D Beyond</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/resources.html">Resources</a>
@@ -52,7 +52,6 @@
                 </div>
             </nav>
     </header>
-
     <main class="background-img">
         <div class="grid-cards">
         <div class="cards">
