--- a/pages/resources.html
+++ b/pages/resources.html
@@ -34,13 +34,13 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">The basics</a>
+                        <a class="nav-link" href="./the-basics.html">The basics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/my-dnd-beyond.html">My D&D Beyond</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/resources.html">Resources</a>
+                        <a class="nav-link" href="">Resources</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/news.html">News</a>
